Issue 305 Improve story and pages readability
- Reduce content width. The very wide page reduced readability.
With current font is the total characters down to about 130.
Still quite wide.

--- a/themes/elmcip/css/layout-fixed.css
+++ b/themes/elmcip/css/layout-fixed.css
@@ -146,6 +146,13 @@ body {
   margin-right: -760px; /* LTR */ /* Negative value of #content's width + left margin. */
 }
 
+.no-sidebars.node-type-page #content,
+.no-sidebars.node-type-story #content {
+  margin-right: -800px;
+  margin-left: 80px;
+  width: 800px;
+}
+
 #content .section {
   margin: 0 10px;
 }
